[package]
name = "angle_gles_generator"
version = "0.4.0"
authors = ["tasogare3710 <tasogare.android@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "angle_gles_generator"
path = "src/main.rs"

[dependencies.serde]
version = "=1.0.188"
features = ["serde_derive"]

[dependencies.ron]
version = "=0.8.1"

[dependencies.gl_generator]
version = "=0.14.0"

[dependencies.bindgen]
version = "=0.68.1"

[dependencies.pico-args]
version = "=0.5.0"
